@@ -221,6 +221,11 @@ actions preview. True by default.
 boolean, if true, a version will be shown for each package in the
 actions preview. False by default.
 
+=item cupt::console::actions-preview::show-vendors
+
+boolean, if true, a version will be shown for each package in the actions
+preview. False by default.
+
 =item cupt::console::use-colors
 
 string, specifies whether to use colors in the console interface. Defaults to
