@@ -94,6 +94,7 @@ _cupt()
 					--resolver=fair --resolver=full --max-solution-count= \
 					--no-install-recommends -R --show-archives -A --show-versions -V
 					--show-size-changes -Z --show-reasons --show-deps -D \
+					--show-vendors -O \
 					--download-only -d \
 					--summary-only --no-summary \
 					--assume-yes --yes -y"
